@@ -18,7 +18,7 @@ _sbofind() {
 
   case "${cmd}" in
     sbofind)
-      opts="-h -v -E -e -t -i -R -r -q --help --version --exact-case --exact --no-tags --info --reverse --readme --queue"
+      opts="-h -v -A -E -e -t -i -R -r -q -T --help --version --all-reverse --exact-case --exact --no-tags --info --reverse --readme --queue --top-reverse"
       if [[ ${cur} == -* || ${COMP_CWORD} -eq 1 ]] ; then
         COMPREPLY=( $(compgen -W "${opts}" -- "${cur}") )
         return 0
