@@ -11,7 +11,7 @@ tree for a given name or names
 .P
 sbofind [-h|-v]
 .P
-sbofind [-EetiRrq] search_term (search_term)
+sbofind [-AEetiqRrT] search_term (search_term)
 .SH DESCRIPTION
 .P
 .B
@@ -65,6 +65,13 @@ Show version information.
 .RE
 .P
 .B
+-A|--all-reverse
+.RS
+Show all reverse dependencies in the repository for
+each SlackBuild found.
+.RE
+.P
+.B
 -E|--exact-case
 .RS
 Exact matching only (case-sensitive).
@@ -92,12 +99,13 @@ file for each SlackBuild found.
 .RE
 .P
 .B
--r|--readme
+-q|--queue
 .RS
-Show the contents of the
+Show the build queue for each SlackBuild found given the contents
+of
 .I
-README
-file for each SlackBuild found.
+/etc/sbotools/sbotools.hints\fR\
+\&.
 .RE
 .P
 .B
@@ -114,13 +122,19 @@ are not included.
 .RE
 .P
 .B
--q|--queue
+-r|--readme
 .RS
-Show the build queue for each SlackBuild found given the contents
-of
+Show the contents of the
 .I
-/etc/sbotools/sbotools.hints\fR\
-\&.
+README
+file for each SlackBuild found.
+.RE
+.P
+.B
+-T|--top-reverse
+.RS
+Show the top-level reverse dependencies, installed or not,
+for one or more scripts.
 .RE
 .SH EXIT CODES
 .P
