@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Build 3"
-.TH SBO::Lib::Build 3 "Setting Orange, Discord 12, 3191 YOLD" "" "sbotools 3.5"
+.TH SBO::Lib::Build 3 "Prickle-Prickle, Discord 46, 3191 YOLD" "" "sbotools 3.5"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -97,6 +97,12 @@ removed when sbotools exits.
 .el .SS \f(CW$tmpd\fP
 .IX Subsection "$tmpd"
 This is the same as \f(CW$TMP\fR if it is set. Otherwise, it is \f(CW\*(C`/tmp/SBo\*(C'\fR.
+.ie n .SS @last_level_reverse
+.el .SS \f(CW@last_level_reverse\fP
+.IX Subsection "@last_level_reverse"
+This is an array containing the last level of reverse dependencies generated
+by \f(CW\*(C`sbofind\*(C'\fR with \f(CW\*(C`all\-reverse\*(C'\fR and \f(CW\*(C`top\-reverse\*(C'\fR. It is used only by
+\&\f(CW\*(C`sbofind\*(C'\fR.
 .ie n .SS @upcoming
 .el .SS \f(CW@upcoming\fP
 .IX Subsection "@upcoming"
@@ -176,6 +182,9 @@ their dependencies in reverse build order.
 of reverse dependency relationships (from \f(CW\*(C`get_reverse_reqs\*(C'\fR) and two arrays.
 These arrays should not be included when called from outside of the subroutine.
 \&\f(CWget_full_reverse()\fR returns an array with installed reverse dependencies.
+.PP
+The final level of reverse dependencies is kept in the shared array \f(CW@last_level_reverse\fR;
+these are displayed only by \f(CW\*(C`sbofind \-\-top\-reverse\*(C'\fR.
 .PP
 If any circular reverse dependencies are found, the script exits with \f(CW\*(C`_ERR_CIRCULAR\*(C'\fR.
 .SS get_full_reverse_queue
